Move images to image folder

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 </blockquote>
 <em>welcome</em>
 
-<img src="assets/749807.png" TITLE="ijse.com" alt="RDR" width="1441" height="1000">
+<!--<img src="assets/749807.png" TITLE="ijse.com" alt="RDR" width="1441" height="1000">-->
+<!--customize pictures with window sizes-->
+<picture>
+    <source media="(min-width: 1000px)" srcset="assets/images/large.jpg">
+    <source media="min-width: 800px)" srcset="assets/images/Medium.jpg">
+    <img src="assets/images/Small.jpg" title="iphone" alt="iphone">
+</picture>
 
 </body>
 </html>
