--- a/index.html
+++ b/index.html
@@ -59,6 +59,234 @@
     <source media="min-width: 800px)" srcset="assets/images/Medium.jpg">
     <img src="assets/images/Small.jpg" title="iphone" alt="iphone">
 </picture>
+<!--mp4 wda krnne natnm webm eka wda krnwa-->
+<video
+        controls
+        autoplay
+        loop
+        muted
+        poster="assets/images/photo_2024-02-03_10-29-12.jpg">
 
+    <source src="assets/Videos/car.mp4" type="video/mp4">
+    <source src="assets/Videos/car.webm" type="video/webm">
+    <track label="english" src="assets/sub/sample.vtt" kind="subtitles" srclang="en" default>
+    <track label="arabic" src="assets/sub/arabic.vtt" kind="subtitles" srclang="ar" default>
+    Your browser does not support the video tag
+</video>
+<audio controls>
+    <source src="assets/audio/audio_file2.mp3" type="audio/mp3">
+    Your browser does not support the audio tag
+</audio>
+
+<!--Ordered list-->
+<ol type="A">
+    <li>
+        Thisura
+    </li>
+    <li>
+        Vimukthi
+    </li>
+    <li>
+        Liyanage
+    </li>
+</ol>
+<!--UnOrdered list-->
+<ul type="circle">
+    <li>
+        Thisura
+    </li>
+    <li>
+        Vimukthi
+    </li>
+    <li>
+        Liyanage
+    </li>
+</ul>
+<!--definition list-->
+<dl>
+    <dt>lang</dt>
+    <dd>java</dd>
+    <dd>css</dd>
+    <dd>c</dd>
+
+    <dt>Frameworks</dt>
+    <dd>ReactJs</dd>
+    <dd>NextJs</dd>
+    <dd>Vuejs</dd>
+</dl>
+<!--nested list-->
+<ol>
+    <li>kamal
+    <ol>hi</ol>
+        <ol>hi</ol>
+    </li>
+    <li>ruwan</li>
+    <li>sunil</li>
+</ol>
+<!--Hibperlinks = navigate between pages-->
+<a href="https://search.yahoo.com/search?fr=mcafee&type=E210US91215G0&p=ijse">Click me</a>
+<a href="Pages/Page1.html">Click me</a>
+
+<a href="Pages/#java">java</a>
+<a href="#C">C</a>
+<a href="#python">python</a>
+<a href="#end">End</a>
+
+<a href="assets/Pdf/History%20of%20Internet%20and%20World%20Wide%20Web.pdf" download>Download</a>
+
+<a href="Pages/Page1.html#react">ReactJs</a>
+<a href="Pages/Page1.html#angular">Angular</a>
+<a href="Pages/Page1.html#next">NextJs</a>
+<a href="Pages/Page1.html#vue">VueJs</a>
+
+<h1 id="java">java</h1>
+<p>
+
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+
+</p>
+<h1 id="C">C</h1>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+</p>
+<h1 id="python">python</h1>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+</p>
+<h1 id="end">End</h1>
+
+<!--HTML TABLES-->
+
+<table border="10"bordercolor = "#4a148c">
+    <caption>Student</caption>
+<!--    Table header-->
+    <thead>
+    <th>id</th>
+    <th>Name</th>
+    <th>Institute</th>
+    <th>address</th>
+    </thead>
+
+<!--    Table body-->
+    <tbody>
+    <tr>
+        <td>1</td>
+        <td>Thisura</td>
+        <td>Ijse</td>
+        <td>Panadura</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Vimukthi</td>
+        <td>Nsbm</td>
+        <td>Kalutara</td>
+    </tr>
+    </tbody>
+
+<!--    Table footer-->
+    <tfoot>
+    <th>id</th>
+    <th>Name</th>
+    <th>Institute</th>
+    <th>address</th>
+    </tfoot>
+</table>
+
+<table border="5">
+    <thead>
+    <th>ID</th>
+    <th>Name</th>
+    <th>Subject</th>
+    <th>Email</th>
+    <th>Email2</th>
+    </thead>
+    <tbody>
+    <tr>
+        <td>1</td>
+        <td>Thisura</td>
+        <td>Internet technology</td>
+        <td>thisuravimukthi123@gmal.com</td>
+        <td>thisuravimukthi123@gmal.com</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>vimukthi</td>
+        <td>DBM</td>
+        <td colspan="2">vimukthi123@gmal.com</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Liyanage</td>
+        <td>Prf</td>
+        <td>thisuravimukthi123@gmal.com</td>
+        <td>thisuravimukthi123@gmal.com</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>ranil</td>
+        <td>Prf</td>
+        <td colspan="2" rowspan="3">ranil@gmal.com</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>mahinda</td>
+        <td>Prf</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>sirisena</td>
+        <td>Prf</td>
+    </tr>
+    </tbody>
+    <tfoot></tfoot>
+</table>
+<div>
+    Hello
+</div>
+<div>
+    Java
+</div>
+<samp>Welcome</samp>
+<samp>Java</samp>
+<p>Hello student welcome to ijse.<br>let's learn internet tecnology</p>
+<hr color="#ab003c">
+
+<!--Use to backup-->
+<header></header>
+<!--<section>About</section>-->
+<!--<section>Education</section>-->
+<!--<section>Contact</section>-->
+<footer></footer>
 </body>
 </html>
